set(OSCCTRL false)

cmake_minimum_required(VERSION 3.4.1)
add_library( dsp_faust SHARED src/main/cpp/java_interface_wrap.cpp src/main/cpp/DspFaust.cpp )
add_library( dsp_faust_motion SHARED src/main/cpp/java_interface_wrap_motion.cpp src/main/cpp/DspFaustMotion.cpp )
if(OSCCTRL)
add_library( libOSCFaust SHARED IMPORTED )
set_target_properties( libOSCFaust PROPERTIES IMPORTED_LOCATION /usr/local/share/faust/osclib/android/libs/${ANDROID_ABI}/libOSCFaust.so )
endif(OSCCTRL)
find_library( log-lib log )
if(OSCCTRL)
target_link_libraries( dsp_faust dsp_faust_motion libOSCFaust ${log-lib} )
elseif(NOT OSCCTRL)
target_link_libraries( dsp_faust ${log-lib} )
target_link_libraries( dsp_faust_motion ${log-lib} )
endif(OSCCTRL)